k8s/base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bubbles
spec:
  hostnames:
  - bubbles.cluster.local
  parentRefs:
  - name: bubbles
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: bubbles
  rules:
  - backendRefs:
    - name: bubbles
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
