k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bubbles
spec:
  rules:
  - host: bubbles.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bubbles
            port:
              number: 80
